# fit-mask-to-image

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  version.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml  publish-to-registry.yml  publish.yml
example/: Fit Mask to Image Empty Test workflow.json  Fit Mask to Image Example workflow.json
py/: fit_mask_to_image.py
scripts/hooks/: pre-commit
tests/: conftest.py  test_basic.py
