[project]
name = "fit-mask-to-image"
description = "Automatically resizes masks to match image dimensions for seamless inpainting workflows."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Development dependencies for CI/CD", "# Note: Runtime dependencies (torch, torchvision, numpy, pillow) are provided by ComfyUI", "# and are not needed for basic syntax/structure validation", "pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=23.0.0", "flake8>=6.0.0", "mypy>=1.0.0"]

[project.urls]
Repository = "https://github.com/DazzleNodes/fit-mask-to-image"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DazzleNodes/fit-mask-to-image/wiki"
"Bug Tracker" = "https://github.com/DazzleNodes/fit-mask-to-image/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "fit-mask-to-image"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

